# practicum

./: .envrc  Pipfile  contact.py  cracker-tool.sh  kibersh.sh  main.py  pyproject.toml  requirements.txt  tmp.txt  tor-start.fish.py
