[tool.poetry]
name = "practicum"
version = "0.1.0"
description = ""
authors = ["Yastrebov Ivan <uq12@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
termux-api = "^1.2.5.2"
rich = "^13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
